# pluslife-notifier

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml  test.yml
src/: graph.rs  lib.rs  mailgun.rs  messages.rs  notifier.rs  sessions.rs  state.rs  websockets.rs
src/static/: index.html  privacy.html
src/static/icons/material-design/: LICENSE.txt
templates/: graph.html  session-created.html
