[package]
name = "pluslife-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.7", features = ["macros"] }
axum-embed = "0.1.0"
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15.0"
duration-str = "0.18.0"
email_address = { version = "0.2.9", features = ["serde_support"] }
jiff = { version = "0.2.16", features = ["serde"] }
mime = "0.3.17"
plotters = "0.3.7"
plotters-bitmap = "0.3.7"
png = "0.18.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum_macros = "0.27.2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
